--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
           <a class="nav-link active" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="dropdown" href="selectprojects.html">Select Projects</a>
-          <div class="dropdown-menu">
+          <a class="nav-link" id="selectProjects" href="selectprojects.html">Select Projects</a>
+          <div class="dropdown-menu" id="selectProjectsList">
             <a class="dropdown-item" href="irvingplace.html">Irving Place</a>
             <a class="dropdown-item" href="miamibeach.html">Miami Beach</a>
             <a class="dropdown-item" href="williamsburg.html">Williamsburg</a>
@@ -74,7 +74,7 @@
               of 147 Waverly Place in Manhattan, as well as the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
           </div>
         </div>
-        <div class="row">
+      <!--  <div class="row">
           <p class="subtitle">Development</p>
           <hr class="subtitle-hr">
           <div class="col-xs-6 remove-gutters">
@@ -102,7 +102,7 @@
               <li><a href="williamsburg.html"><span>Williamsburg</span></a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-sm-6 arrows-img-6">
         <a class="about-carousel-open" href="#lb1"></a>
@@ -132,6 +132,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
+  <script>
+    $("#selectProjects").hover(
+      function() {
+        $("#selectProjectsList").css('display', 'block');
+      },
+      function() {
+        setTimeout(
+          function() {
+            $("#selectProjectsList").css('display', 'none');
+          }, 1000);
+      }
+    );
+  </script>
 </body>
 
 </html>
