--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 
   <div class="container-fluid" id="about">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-6 fixed-padding">
         <div class="row">
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
