--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="footer-fixed">
     <div class="container-fluid">
       <div class="row">
         <hr class="footer-hr">
