--- a/irvingplace.html
+++ b/irvingplace.html
@@ -66,7 +66,7 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving_DetailA.jpg">
+            <img src="img/Irving/A-min.jpg">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
@@ -80,7 +80,7 @@
       <div class="col-sm-3">
         <img src="img/Irving_render.png">
         <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
-        <img class="img-circle" src="img/Irving_Circle.jpg">
+        <img class="img-circle" src="img/Irving/circle-min.jpg">
         <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
       </div>
     </div>
