--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -46,7 +46,7 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p>Select Projects</p>
+        <p>Columbia University</p>
         <h1>The Harlem Renaissance</h1>
         <hr>
         <p class="case-textblock">This iconic Manhattan neighborhood has recently been revitalized,  driven by the continued expansion of Columbia University as well as the growing financial clout of West Harlem.  Springhouse recognized this opportunity and invested in these two 62,000 square feet mixed-use properties, featuring apartments and retail stores along one of the most highly trafficked stretches in the neighborhood.  Moreover, their proximity to Columbia University and multiple subway lines add to the significant upside potential.</p>
@@ -62,13 +62,13 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Columbia/A-min.jpg">
+            <img src="img/Columbia/facade-min.jpg">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Columbia_DetailB.jpg">
+            <img src="img/Columbia/A-min.jpg">
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
           </div>
         </div>
