--- a/irvingplace.html
+++ b/irvingplace.html
@@ -46,7 +46,7 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p>Select Projects</p>
+        <p>Irving Place</p>
         <h1>Untapped Value at Gramercy Park</h1>
         <hr>
         <p class="case-textblock">Successful investments begin by identifying potential value where others do not.  The property at Irving Place and 17th St. is a prime example. Here, Springhouse saw a highly advantaged Gramercy Park location and a severely mismanaged property, resulting in below market rents. By reconfiguring and overhauling the space and enhancing the operations, Springhouse was able to attract a new group of tenants - including retail, commercial, and individuals - willing to pay a premium for a prestige location.</p>
@@ -66,13 +66,13 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving/A-min.jpg">
+            <img src="img/Irving/facade-min.jpg">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Irving_DetailB.jpg">
+            <img src="img/Irving/A-min.jpg">
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
           </div>
         </div>
