--- a/bedstuy.html
+++ b/bedstuy.html
@@ -46,7 +46,7 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p>Select Projects</p>
+        <p>Bed-Stuy</p>
         <h1>Higher Education</h1>
         <hr>
         <p class="case-textblock">With a “built-in” market of new apartment seekers and relative insulation from neighborhood economic swings, student housing can be a very lucrative investment. That’s why Springhouse identified this Bedford Avenue property in Clinton Hill, Brooklyn as an great opportunity.  It boasts 43 units - both furnished and unfurnished - solid architecture, and, most importantly - convenient walking and public transportation access to Parsons, The New School, The Culinary Institute, NYU, and other institutions.</p>
@@ -62,13 +62,13 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/BedStuy/A-min.jpg">
+            <img src="img/BedStuy/facade-min.jpg">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Bed-Stuy_DetailB.jpg">
+            <img src="img/BedStuy/A-min.jpg">
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
           </div>
         </div>
