--- a/williamsburg.html
+++ b/williamsburg.html
@@ -46,7 +46,7 @@
   <div class="container-fluid" id="caseStudy">
     <div class="row">
       <div class="col-sm-3">
-        <p>Select Projects</p>
+        <p>Williamsburg</p>
         <h1>The New Creative Class</h1>
         <hr>
         <p class="case-textblock">With this property, Springhouse saw an opportunity to tap into the growth and increasing affluence of East Williamsburg and its younger, “creative” class audiences.  The property features a prime location in a vibrant neighborhood,  close proximity to public transit, and a range of on-site amenities such as a gym, game room, and a massive rooftop deck with skyline views of Manhattan.  Moreover, many of the units can easy be converted into shared apartments, making them especially attractive to the young tenants.</p>
@@ -62,13 +62,13 @@
       <div class="col-sm-6">
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Williamsburg/A-min.jpg">
+            <img src="img/Williamsburg/facade-min.jpg">
             <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <img src="img/Williamsburg_DetailB.jpg">
+            <img src="img/Williamsburg/A-min.jpg">
             <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
           </div>
         </div>
