--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
           <p class="subtitle">Adam Verner</p>
           <hr class="subtitle-hr">
           <div class="col-sm-6">
-            <img class="media-fw" src="img/portrait.png">
+            <img class="media-fw portrait" src="img/portrait.png">
           </div>
           <div class="col-sm-6">
             <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, Mr. Verner leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Mr. Verner has successfully closed
