--- a/bedstuy.html
+++ b/bedstuy.html
@@ -63,7 +63,7 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
           </div>
         </div>
         <div class="row">
