--- a/about.html
+++ b/about.html
@@ -50,10 +50,18 @@
           <p class="subtitle">Our Story</p>
           <hr class="subtitle-hr">
           <div class="col-sm-6 ourStory">
-            <p>Springhouse creates value by recognizing real estate opportunities before others do, understanding what is possible, and then applying our expertise in investment, operations, and management to unlock their full potential and deliver exceptional returns.<br><br>We focus on investments that are undervalued or ineffectively managed - properties that may on the surface appear challenging, but with the right application of design and operational savvy, can be turned around efficiently and generate long-term value.<br><br>Our approach is comprehensive. We consider every factor, from access to emerging consumer markets to neighborhood trends to cultural factors.  We partner with the top architects, designers, and contractors. We use our asset and property management expertise to ensure each of our properties generate maximum premiums against costs and investment.</p>
+            <p>Springhouse creates value by recognizing real estate opportunities before others do, understanding what is possible, and then applying our expertise in investment, operations, and management to unlock their full potential and deliver exceptional
+              returns.
+              <br>
+              <br>We focus on investments that are undervalued or ineffectively managed - properties that may on the surface appear challenging, but with the right application of design and operational savvy, can be turned around efficiently and generate
+              long-term value.
+              <br>
+              <br>Our approach is comprehensive. We consider every factor, from access to emerging consumer markets to neighborhood trends to cultural factors. We partner with the top architects, designers, and contractors. We use our asset and property management
+              expertise to ensure each of our properties generate maximum premiums against costs and investment.</p>
           </div>
           <div class="col-sm-6">
-            <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative vision.</p>
+            <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative
+              vision.</p>
             <hr>
             <p class="quote text-xs-center">Combining entrepreneurial spirit with institutional execution</p>
             <hr>
@@ -62,19 +70,17 @@
         <div class="row">
           <p class="subtitle">Adam Verner</p>
           <hr class="subtitle-hr">
-          <div class="col-sm-6">
-            <img class="media-fw portrait" src="img/portrait.png">
-          </div>
-          <div class="col-sm-6">
+          <div class="col-xs-12">
+            <div class="col-sm-6"><img class="media-fw portrait" src="img/portrait.png"></div>
             <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, Mr. Verner leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Mr. Verner has successfully closed
               in excess of $400 million of real estate assets across the mixed-use, multifamily and hospitality sectors. Prior to forming Springhouse, Mr. Verner was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments
               in the New York Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Mr. Verner was also responsible for the management and oversight of the Grand Review portfolio, a
-              20 building collection of mixed-use assets spread throughout New York City. Prior to joining Urban American, Mr. Verner was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset
-              Management, a $10 billion hedge fund which specialized in the mixed-use, residential and hospitality sectors. Notable projects include the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion
-              of 147 Waverly Place in Manhattan, as well as the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
+                20 building collection of mixed-use assets spread throughout New York City. Prior to joining Urban American, Mr. Verner was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset
+                Management, a $10 billion hedge fund which specialized in the mixed-use, residential and hospitality sectors. Notable projects include the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion
+                of 147 Waverly Place in Manhattan, as well as the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
           </div>
         </div>
-      <!--  <div class="row">
+        <!--  <div class="row">
           <p class="subtitle">Development</p>
           <hr class="subtitle-hr">
           <div class="col-xs-6 remove-gutters">
