--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             <p>Ultimately, Springhouse views successful real estate investment a both a strategic and creative business. It takes the right experience, the right approach and the right execution. But, before any of this is possible, it takes the right creative
               vision.</p>
             <hr>
-            <p class="quote text-xs-center">Combining entrepreneurial spirit with institutional execution</p>
+            <p class="quote text-xs-center">Entrepreneurial Spirit<br>+<br>Institutional Execution</p>
             <hr>
           </div>
         </div>
@@ -72,12 +72,8 @@
           <hr class="subtitle-hr">
           <div class="col-xs-12">
             <div class="col-sm-6"><img class="media-fw portrait" src="img/portrait.png"></div>
-            <p>Adam Verner is the Founder and CEO of Springhouse Partners. In this capacity, Mr. Verner leads corporate strategy and execution for the firm’s principal investment transactions. Since its inception in 2010, Mr. Verner has successfully closed
-              in excess of $400 million of real estate assets across the mixed-use, multifamily and hospitality sectors. Prior to forming Springhouse, Mr. Verner was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments
-              in the New York Metro area. In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development. Mr. Verner was also responsible for the management and oversight of the Grand Review portfolio, a
-                20 building collection of mixed-use assets spread throughout New York City. Prior to joining Urban American, Mr. Verner was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset
-                Management, a $10 billion hedge fund which specialized in the mixed-use, residential and hospitality sectors. Notable projects include the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion
-                of 147 Waverly Place in Manhattan, as well as the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn. Adam graduated with a business degree from American University in Washington, DC.</p>
+            <p>Adam Verner is the Founder and CEO of Springhouse Partners.  In this capacity, he leads corporate strategy and execution for the firm’s principal investment transactions.  Since its inception in 2010,  Adam has successfully closed in excess of $400 million of real estate assets across the mixed-use, multifamily and hotel sectors.  Prior to forming Springhouse, Adam was the Director of Acquisitions at Urban American, an owner and operator of 12,000 apartments in the New York Metro area.  In this role, he led the $75 million acquisition of the Westchester Plaza, a 1,000 unit mixed-use development.  Adam was also responsible for the management and oversight of the Grand Review portfolio, a 20 building collection of mixed-use assets spread throughout New York City.
+Prior to joining Urban American, Adam was responsible for originating $500 million of commercial real estate equity and debt investments at Marathon Asset Management, a $10 billion hedge fund which specialized in opportunistic investments across all property types.  Notable projects included the $3 billion Cosmopolitan Resort &amp; Casino development in Las Vegas, the high-end condominium conversion of 147 Waverly Place in Manhattan and the initial zoning &amp; land use phase for the Domino Sugar Factory redevelopment in Williamsburg, Brooklyn.  Adam graduated with a business degree from American University in Washington, DC.</p>
           </div>
         </div>
         <!--  <div class="row">
