--- a/bedstuy.html
+++ b/bedstuy.html
@@ -63,21 +63,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/facade-min.jpg">
-            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">With convenient access to Pratt, Parsons, The New School, and New York University, this 9 story, 64,000 square feet building presents a tremendous opportunity for singles, recent grads, and young families.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/BedStuy/A-min.jpg">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+            <p>A staggered, set-back profile and brick construction details integrate with the neighborhood architecture</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/bedstuy_render.png">
-        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Constructed in 2004, the asset features 43 unit, many with balconies and terraces</p>
         <img class="img-circle" src="img/BedStuy/circle-min.jpg">
-        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">Bed Stuy has experienced tremendous growth in the past decade and now offers a thriving, culturally diverse mix attractive to artists, musicians, filmmakers, and young professionals.</p>
       </div>
     </div>
   </div>
