--- a/columbiauniversity.html
+++ b/columbiauniversity.html
@@ -63,21 +63,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Columbia/facade-min.jpg">
-            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">52 large units and 7 retail stores in a highly advantaged location in the heart of West Harlem and adjacent to Columbia University.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Columbia/A-min.jpg">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+            <p>Historic brownstones with period details deliver classic New York charm to tenants</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/columbia_render.png">
-        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">The majority of the units are 3-bedroom apartments, especially attractive to the area’s burgeoning professional class.</p>
         <img class="img-circle" src="img/Columbia/circle-min.jpg">
-        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">A vibrant, thriving neighborhood poised to grow significantly with Columbia University’s multi-billion dollar expansion plans.</p>
       </div>
     </div>
   </div>
