--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
       <div class="col-sm-6">
         <p class="text-xs-left text-uppercase subtitle">Overview</p>
         <hr class="subtitle-hr">
-        <p>Springhouse Partners is a New York City based real estate investment frm that was founded in 2010. The frm manages capital on behalf of fnancial institutions, family oﬃces and private investors with a focus on capital preservation and value creation
-          to generate superior risk adjusted returns over diﬀerent business and economic cycles.</p>
+        <p>Springhouse Partners was founded in 2010 as a response to the existing real estate crises, and has evolved into a fully integrated investment and development company that invests across the following strategies: value-add, special situations and development.  Our approach is comprehensive and we strive to connect core entrepreneurial spirit alongside strong institutional execution in all facets of our business.  To date we have acquired and re-developed mixed-use, multi-family and hotel assets throughout New York City and South Florida.</p>
       </div>
       <div class="col-sm-3">
         <p class="text-xs-left text-uppercase subtitle">Address</p>
