--- a/irvingplace.html
+++ b/irvingplace.html
@@ -67,21 +67,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/facade-min.jpg">
-            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">A corner, mixed-use asset surrounded by fine dining, hotels, and shopping. Set in the heart of Gramercy Park – one of New York’s most charming and desirable neighborhoods.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Irving/A-min.jpg">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+            <p>An upscale mixology bar (“Dear Irving”) occupies 2,400 sf at the property and includes the lavish private room pictured above, drawing a sophisticated and celebrity clientele.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/Irving_render.png">
-        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Expansive multi-room layouts on this vintage floor plan recall the building’s history and pedigree</p>
         <img class="img-circle" src="img/Irving/circle-min.jpg">
-        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">A vibrant, highly walkable neighborhood with a range of amenities, including the famous greenmarket at Union Square</p>
       </div>
     </div>
   </div>
