--- a/miamibeach.html
+++ b/miamibeach.html
@@ -66,21 +66,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Miami/facade-min.jpg">
-            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">A stunning historic building sets the stage for Springhouse Partners’ new hospitality venture – a design-centric upscale hostel catering to a hip, youthful, and international clientele</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Miami/A-min.jpg">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+            <p>The new development sits just steps from the Lincoln Road pedestrian mall and its many shops, restaurants, and attractions</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/Miami_render.png">
-        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Stylish Miami deco features, including a dramatic parapet, give the development a signature look</p>
         <img class="img-circle" src="img/Miami/circle-min.jpg">
-        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">A premier destination for younger travellers, South Beach is known for its thriving, walkable thoroughfares, eclectic cultural mix, and 24/7 entertainment</p>
       </div>
     </div>
   </div>
