--- a/williamsburg.html
+++ b/williamsburg.html
@@ -63,21 +63,21 @@
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/facade-min.jpg">
-            <p class="extra-lower">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+            <p class="extra-lower">An striking new build delivering 32 stylish, loft-style condominium units to the vibrant East Williamsburg market.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12">
             <img src="img/Williamsburg/A-min.jpg">
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui oﬃcia deserunt mollit anim id est laborum. Ullamco laboris nisi ut aliquip. </p>
+            <p>A range of amenities – including a game room, full gym, and bike storage  – are designed to support younger residents’ lifestyle and tastes.</p>
           </div>
         </div>
       </div>
       <div class="col-sm-3">
         <img src="img/Williamsburg.png">
-        <p class="case-textblock">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+        <p class="case-textblock">Expansive terraces and open-concept layouts make the property especially attractive to the neighborhood’s younger residents.</p>
         <img class="img-circle" src="img/Williamsburg/circle-min.jpg">
-        <p class="case-textblock">Duis aute irure dolor in reprehenderit. Einm ad minim veniam, nostrud ut exercitation ullamco laboris nisialiquip ex ea commodo consequat.</p>
+        <p class="case-textblock">East Williamsburg continues to grow in affluence while still retaining true neighborhood charm.</p>
       </div>
     </div>
   </div>
