--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@ Prior to joining Urban American, Adam was responsible for originating $500 milli
       </div>
       <div class="col-sm-6 arrows-img-6">
         <a class="about-carousel-open" href="#lb1"></a>
-        <img class="media-fw" src="img/about-img.png">
+        <img class="media-fw" src="img/AboutPage-min.jpg">
         <a href="#_" class="lightbox" id="lb1">
           <img src="img/about-img.png">
         </a>
