--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="row home-carousel">
       <div class="col-xs-12 arrows-img">
         <a class="home-carousel-open" href="#lb1"></a>
-        <img class="home-carousel-img" src="img/cover.jpg">
+        <img class="home-carousel-img" src="img/HomePage_flatiron_view_181-min.jpg">
         <a href="#_" class="lightbox" id="lb1">
-          <img src="img/cover.jpg">
+          <img src="img/HomePage_flatiron_view_181-min.jpg">
         </a>
       </div>
     </div>
